--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -38,5 +38,4 @@ include::09-extended.adoc[]
 include::off-chain/off-chain.adoc[]
 include::game/game.adoc[]
 include::parameters/parameters.adoc[]
-// include::07-tour.adoc[leveloffset=+ 1]
-// include::08-testing.adoc[leveloffset=+ 1]
+include::bibliography.adoc[]
