--- a/plutus-book/doc/09-extended.adoc
+++ b/plutus-book/doc/09-extended.adoc
@@ -325,7 +325,7 @@ scripts to add specific functionality to the UTxO ledger, we would like to
 point the reader to the following documents,
 
 * Multi-currency on the UTXO Ledger, see <<multicur>>
-- A implementation of a script-based model for different types of
+- An implementation of a script-based model for different types of
 currency as well as non-fungible tokens on the mockchain
 * A Formal Specification of a Multi-Signature Scheme Using Scripts, see <<multisig>>
 - A formal specification of enforcing a custom witnessing policy for spending
