--- a/plutus-book/doc/plutus.adoc
+++ b/plutus-book/doc/plutus.adoc
@@ -39,5 +39,6 @@ include::off-chain/off-chain.adoc[]
 include::game/game.adoc[]
 include::parameters/parameters.adoc[]
 include::multi/multi.adoc[]
+include::token/token.adoc[]
 include::bibliography.adoc[]
 
